--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -21,3 +21,22 @@ code {
 .cardflatop{
   border-radius: 0px 50px;
 }
+.blue-primary{
+  background-color: rgb(58, 58, 240);
+}
+
+.text-white{
+  color: white;
+}
+
+.headermenu:hover{
+  transition-duration: 0.4s;
+  background-color: #0e5fd8;
+}
+
+.headermenu{
+  transition-duration: 0.5s;
+  background-color: #0d6efd;
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
