--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -30,13 +30,13 @@ code {
 }
 
 .headermenu:hover{
-  transition-duration: 0.4s;
-  background-color: #0e5fd8;
+  transition-duration: 0.2s;
+  background-color: rgb(0, 97, 242);
 }
 
 .headermenu{
-  transition-duration: 0.5s;
+  transition-duration: 0.2s;
   background-color: #0d6efd;
-  padding-top: 1px;
-  padding-bottom: 1px;
+  border-radius: 10px;
+  user-select: none;
 }
