--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -40,3 +40,26 @@ code {
   border-radius: 10px;
   user-select: none;
 }
+.agentlocationelement{
+  transition-duration: 0.3s;
+  user-select: none;
+}
+.agentlocationelement:hover{
+  transition-duration: 0.3s;
+  background-color: rgb(239, 239, 239);
+}
+
+.userpanelbutton{
+  text-align: center;
+  padding-top:2px;
+  padding-bottom: 2px;
+  cursor: pointer;
+  border-radius: 10px;
+  transition-duration: 0.5s;
+  user-select: none;
+}
+
+.userpanelbutton:hover{
+  transition-duration: 0.5s;
+  background-color: rgb(231, 231, 231);
+}
